--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@emotion/react": "^11.11.3",
     "@emotion/styled": "^11.11.0",
     "@mui/material": "^5.15.9",
+    "akar-icons": "^1.9.30",
     "next": "14.1.0",
     "react": "^18",
     "react-dom": "^18"
